[tool.poetry]
name = "llm-langchain-demos"
version = "0.1.0"
description = ""
authors = ["yx <yangxue.cs@foxmail.com>"]
readme = "README.md"
packages = [{include = "llm_langchain_demos", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.3"
langchain-community = "^0.2.4"
dashscope = "^1.19.2"
qianfan = "^0.3.15"
gradio = "^4.36.1"
transformers = "^4.41.2"
openai = "^1.34.0"
whisper = "^1.1.10"
modelscope = "^1.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
